--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,16 @@ footer {
   text-align: right;
 }
 
+.day {
+  fill: #fff;
+  stroke: #ccc;
+}
 
+.month {
+  fill: none;
+  stroke: #000;
+  stroke-width: 2px;
+}
 
 /*SVG parameters*/
 .line {
