--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,3 +83,17 @@ footer {
   stroke: #000;
   shape-rendering: crispEdges;
 }
+
+/* Tooltips */
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 8em;
+  height: 3.5em;
+  padding: 0.5em;
+  font: 10px sans-serif;
+  background: ghostwhite;
+  border: 0px;
+  border-radius: 3px;
+  pointer-events: none;
+}
