--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,14 +12,14 @@
 .col-offset-1 {
   margin-left: 8.33%}
 
-/* Blocs temporaires */
+/* Blocs temporaires
     [class*="col-"], footer {
     background-color: white;
     border: 1px solid lightgrey;
     border-radius: 6px;
     line-height: 40px;
     text-align: left;
-  }
+  }*/
 
 /* Corps */
 body {
