sidebar pour choix ville

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,24 @@ body {
   text-align: center;
 }
 
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 100px; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  padding: 8px 8px 8px 8px;
+  text-decoration: none;
+  font-size: 10px;
+  color: #818181;
+  display: block;
+}
+
+
 .page_title {
   font-family: Bubblegum;
   font-size: 4.5em;
@@ -121,3 +139,10 @@ div.tooltip {
   border-radius: 3px;
   pointer-events: none;
 }
+
+#main {
+  transition: margin-left .5s;
+  padding: 0px;
+  margin-left: 100px;
+}
+
