--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,3 +146,15 @@ div.tooltip {
   margin-left: 100px;
 }
 
+div.tooltip { 
+    position: absolute;     
+    text-align: center;     
+    width: 90px;          
+    height: 30px;         
+    padding: 2px;       
+    font: 12px sans-serif;    
+    background: lightsteelblue; 
+    border: 0px;    
+    border-radius: 8px;     
+    pointer-events: none;     
+}
